--- a/.github/workflows/crossterm_test.yml
+++ b/.github/workflows/crossterm_test.yml
@@ -73,6 +73,7 @@ jobs:
     - name: Test no default features with windows feature enabled
       if: matrix.os == 'windows-2019'
       run: cargo test --no-default-features --features "windows" -- --nocapture --test-threads 1
+      continue-on-error: ${{ matrix.can-fail }}
     - name: Test Packaging
       if: matrix.rust == 'stable'
       run: cargo package
